# practice

./: .gitignore
.claude/: settings.local.json
16BGO_G4/: CMakeLists.txt  convert.cpp  convert16.cpp  drawsame.C  drawsame1.C  exampleB1.cc  execute.sh  new_convert.cpp  readme.txt  run1.mac  run1bkl.mac
16BGO_G4/include/: PrimaryGeneratorAction.hh
16BGO_G4/src/: DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
JUNA/source_cal/: cali_factor.txt  convert.sh
analysis/: readme.md
analysis/env/: environment.txt
analysis/scripts/: auto_convert.sh
bat/: bayesian_gamma_analysis.py  generate_test_spectra.py
bat/data/: measured.csv  templates.csv  truth_weights.csv
bat/output/: posterior_weights.csv
gas detector/: README.md
gas detector/config/: sim.yaml  sim_ni60.yaml
gas detector/include/: Config.hh  EventAction.hh  RunAction.hh  SteppingAction.hh
gas detector/src/: ActionInitialization.cc  Config.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  main.cc
gas detector/tools/: draw_energy_pairs.C
gas_detector/: CMakeLists.txt  README.md
gas_detector/config/: sim.yaml
gas_detector/include/: ActionInitialization.hh  DetectorConstruction.hh  PrimaryGeneratorAction.hh
gas_detector/src/: ActionInitialization.cc  Config.cc
include/: DetectorConstruction.hh  EventAction.hh  RunAction.hh  SteppingAction.hh  macro.hh
include/old/: DetectorConstruction.hh  EventAction.hh
python/: 1.py
python/mt/: test.py  (+1 more)
scripts/: monitor.sh  watchdog.sh
(+83 files in other folders)
